--- a/jupiter-task/package.json
+++ b/jupiter-task/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
     "@types/styled-system": "^5.1.15",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
